App updated at 9:37AM 23/01/2024 Dark Theme Added + issues in react-select dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,3 +14,13 @@ body,
   height: 100%;
   font-family: var(--font-poppins);
 }
+
+/* [data-theme="dark"] body {
+  background-color: #000;
+  color: #fff;
+}
+
+[data-theme="light"] body {
+  background-color: #fafafa;
+  color: #000;
+} */
